[package]
name = "fdlib"
version = "0.1.0"
edition = "2021"

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "fdlib"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib", "rlib"]

[dependencies]
fnv = "1.0.7"
nalgebra = { version = "0.31.1" }
rand = "0.8.5"
rand_xoshiro = { version = "0.6.0", features = ["serde1"] }
serde = "1.0.142"
lzzzz = "1.0.3"
rayon = "1.5.3"
message-io = "0.14.6"
pyo3 = { version = "0.16.5", features = ["extension-module"] }
bincode = "1.3.3"
numpy = "0.16.2"
collect_slice = "1.2.0"

[profile.release]
lto = true
# panic = "abort"